fixed Susbcribe button alignment

--- a/src/Components/NewsLetter/NewsLetter.css
+++ b/src/Components/NewsLetter/NewsLetter.css
@@ -56,7 +56,7 @@
   cursor: pointer;
   border: none;
   position: relative;
-  right: 10.5%;
+  right: 11.5%;
 }
 .newsletter {
   /* existing styles */
